FahMon: The Folding@home client monitoring program

SVN

    General
    
      Monitoring
      
      * Added missing protomol core support.

      Other

      * Fixed a number of thread safety issues which caused intermittent crashes
        and generally undesirable behaviour.
      * Added Simplified Chinese translation.

    Linux

      * Fixed accidental inclusion of a gcc debug warning level into
        compiliation. Removes the scary output from 2.3.99.1.

v2.3.99.1 (06/04/09)

    General

      Monitoring

      * Added more rigorous checks to file handling to ensure that invalid file
        access attempts don't crash FahMon (particularly on Windows).

      Other

      * Updated German translation.

v2.3.99 (03/04/09)

    General

      GUI

      * Fixed total PPD value not updating unless a client is clicked.
      * Allow about and benchmark dialogs to be closed with escape key (thanks
        to smartcat99s).
      * Added columns for client type (determined from the core type) and core
        version number.
      * Main progress bar now hides along with the WU Info panel.
      * Total PPD display moved into the status bar.
      * Improved sorting of inaccessible or disabled clients.
      * Removed "zebra" background colour scheme from benchmarks list.
      * Added IRC channel link to help menu and First Time Dialog.
      * Removed info panel from default view, and replaced with extra columns.
      * Added informative tooltips to a number of controls.
      * Window stays maximised after hiding the FAHlog if it was maximised
        initially.

      Monitoring

      * Improved handling of clients within Virtual Machines.
      * Prevented FahMon from crashing when the FAH client produces excessively
        large unitinfo.txt files.
      * Fixed miscalculation of frame count when step count is a non-standard
        number.
      * Limited FAHlog parsing to last 16KiB.