@@ -7,6 +7,7 @@ SVN
       Monitoring
       
       * Added missing protomol core support.
+      * Added missing openmmgpu core support.
 
       Other
 
